Vendas por estado e top 10 vendas por cidade

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -188,6 +188,103 @@
     "ax.set_ylabel('Valor em $')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "## Pergunta de Negócio 3:\n",
+    "\n",
+    "### Qual o Total de Vendas por Estado?\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#novamente usar o groupby para agrupar\n",
+    "vendas_estado = df.groupby('Estado')['Valor_Venda'].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vendas_estado.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reaproveitando o codigo do grafico passado\n",
+    "fig, ax = plt.subplots(figsize =(16,6))\n",
+    "sns.barplot(data = vendas_estado, \n",
+    "            y = 'Valor_Venda', \n",
+    "            x = 'Estado',\n",
+    "            estimator='sum'\n",
+    "            ).set(title = 'Vendas por estado')\n",
+    "plt.xticks(rotation = 80)\n",
+    "ax.set_ylabel('Valor em $')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pergunta de Negócio 4:\n",
+    "\n",
+    "### Quais São as 10 Cidades com Maior Total de Vendas?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mais uma vez o groupby\n",
+    "vendas_cidade = df.groupby('Cidade')['Valor_Venda'].sum().reset_index().sort_values(by='Valor_Venda',ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reaproveitando o codigo do grafico passado\n",
+    "fig, ax = plt.subplots(figsize =(16,6))\n",
+    "sns.barplot(data = vendas_cidade, \n",
+    "            y = 'Valor_Venda', \n",
+    "            x = 'Cidade',\n",
+    "            estimator='sum').set(title = 'As 10 Cidades com Maior Total de Vendas')\n",
+    "ax.bar_label(ax.containers[0], fontsize=10)\n",
+    "plt.xticks(rotation = 80)\n",
+    "ax.set_ylabel('Valor em $')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
