vendas por segmento e grafico de pizza

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -285,6 +285,69 @@
     "ax.set_ylabel('Valor em $')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pergunta de Negócio 5:\n",
+    "\n",
+    "### Qual Segmento Teve o Maior Total de Vendas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agrupamos por segmento e calculamos o total de vendas\n",
+    "maior_seg = df.groupby('Segmento')['Valor_Venda'].sum().reset_index().sort_values(by = 'Valor_Venda',\n",
+    "                                                                                      ascending = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maior_seg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#como o valor está em numeros cientificos, precisamos de um função para mudar esse comportamente\n",
+    "def autopct_format(values): \n",
+    "    def my_format(pct): \n",
+    "        total = sum(values) \n",
+    "        val = int(round(pct * total / 100.0))\n",
+    "        return ' $ {v:d}'.format(v = val)\n",
+    "    return my_format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# faremos um grafico de pizza nesse já que são poucas categorias\n",
+    "plt.figure(figsize = (16, 6))\n",
+    "\n",
+    "# Gráfico de pizza\n",
+    "plt.pie(maior_seg['Valor_Venda'], \n",
+    "        labels = maior_seg['Segmento'],\n",
+    "        autopct = autopct_format(maior_seg['Valor_Venda']),\n",
+    "        startangle = 90)\n",
+    "plt.title('Vendas por categoria')\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
