--- a/analise.ipynb
+++ b/analise.ipynb
@@ -348,6 +348,124 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Pergunta de Negócio 6 \n",
+    "\n",
+    "### Qual o Total de Vendas Por Segmento e Por Ano?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venda_seg_ano = df.groupby(['Segmento','Ano'])['Valor_Venda'].sum().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venda_seg_ano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#aproveitando um gráfico de outro projeto que tenho no github para plotar o resultado dos 3 anos\n",
+    "#dando ênfase ao maior valor\n",
+    "fig,ax = plt.subplots(figsize=(16,6))\n",
+    "\n",
+    "wid = 0.2\n",
+    "\n",
+    "ax.bar(venda_seg_ano[venda_seg_ano['Segmento'] == 'Consumer'].Ano.values-wid,venda_seg_ano[venda_seg_ano['Segmento'] == 'Consumer'].Valor_Venda.values,\n",
+    "       color = '#00c698',label='Consumer',width=wid,)\n",
+    "ax.bar(venda_seg_ano[venda_seg_ano['Segmento'] == 'Corporate'].Ano.values,venda_seg_ano[venda_seg_ano['Segmento'] == 'Corporate'].Valor_Venda.values,\n",
+    "       color = '#00a9b5',label='Corporate',width=wid)\n",
+    "ax.bar(venda_seg_ano[venda_seg_ano['Segmento'] == 'Home Office'].Ano.values+wid,venda_seg_ano[venda_seg_ano['Segmento'] == 'Home Office'].Valor_Venda.values,\n",
+    "       color = '#008ac5',label='Home Office',width=wid)\n",
+    "ax.bar_label(ax.containers[0],fontsize=10)\n",
+    "\n",
+    "ax.xaxis.set_ticks([2015,2016,2017,2018])\n",
+    "\n",
+    "ax.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pergunta de Negócio 7 \n",
+    "### Seguindo as condições abaixo, quantas Vendas Receberiam 15% de Desconto?\n",
+    "\n",
+    "- Se o Valor_Venda for maior que 1000 recebe 15% de desconto.\n",
+    "- Se o Valor_Venda for menor que 1000 recebe 10% de desconto.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#podemos contar os valores a partir do value counts,porem não temos a coluna ainda, por isso precisamos criar\n",
+    "#uma forma simples de aplicar essa condição é usando o np.where, que é um if e else basicamente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Desconto\"] = np.where(df[\"Valor_Venda\"] > 1000, 0.15, 0.10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#verificando se a tabela foi criada\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#agora podemos usar o loc para localizar no dataframe exatamente as linhas que cumprem o requisito\n",
+    "# e depois usar o len(), pra ter a resposta em forma de int\n",
+    "total = df.loc[df['Desconto'] == 0.15].__len__()\n",
+    "print(f'o total de vendas que receberia 15% de desconto é de {total}')"
+   ]
   }
  ],
  "metadata": {
