Média de Vendas Por Segmento, Por Ano e Por Mês

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -466,6 +466,70 @@
     "total = df.loc[df['Desconto'] == 0.15].__len__()\n",
     "print(f'o total de vendas que receberia 15% de desconto é de {total}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pergunta de Negócio 8:\n",
+    "\n",
+    "### Qual o Média de Vendas Por Segmento, Por Ano e Por Mês?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#criando a tabela mÊs ja que não temos\n",
+    "df['Mes'] = df['Data_Pedido'].dt.month"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#verificando se foi criada\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#agora é só agupar com groupby e tirar sua média, aqui vou colocar a soma e mediana tambem  pra treinar a func agg\n",
+    "df_media = df.groupby(['Ano', 'Mes', 'Segmento'])['Valor_Venda'].agg(['sum','mean','median'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_media"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## FIM POR ENQUANTO"
+   ]
   }
  ],
  "metadata": {
