alguns ajustes,markdowns e alloutputs

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analise exploratoria de dados de um loja de varejo\n",
+    "https://community.tableau.com/s/question/0D54T00000CWeX8SAL/sample-superstore-sales-excelxls"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -169,7 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "total_vendas_ano"
+    "#amostra\n",
+    "total_vendas_ano.head()"
    ]
   },
   {
@@ -208,7 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.head()"
+    "#amostra\n",
+    "df.head()\n"
    ]
   },
   {
@@ -312,6 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#amostra\n",
     "maior_seg"
    ]
   },
@@ -350,10 +361,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## Pergunta de Negócio 6 \n",
     "\n",
@@ -366,6 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#amostra\n",
     "df.head()"
    ]
   },
@@ -419,7 +429,7 @@
    "metadata": {},
    "source": [
     "## Pergunta de Negócio 7 \n",
-    "### Seguindo as condições abaixo, quantas Vendas Receberiam 15% de Desconto?\n",
+    "### Seguindo as condições abaixo, queremos analisar os valores de Vendas Receberiam 15% de Desconto?\n",
     "\n",
     "- Se o Valor_Venda for maior que 1000 recebe 15% de desconto.\n",
     "- Se o Valor_Venda for menor que 1000 recebe 10% de desconto.\n",
@@ -522,6 +532,37 @@
    "outputs": [],
    "source": [
     "df_media"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#adicionando um grafico de linhas a essa pergunta\n",
+    "# Vamos extrair os níveis\n",
+    "anos = df_media.index.get_level_values(0)\n",
+    "meses = df_media.index.get_level_values(1)\n",
+    "segmentos = df_media.index.get_level_values(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize = (12, 6))\n",
+    "sns.set_theme()\n",
+    "fig1 = sns.relplot(kind = 'line',\n",
+    "                   data = df_media, \n",
+    "                   y = 'mean', \n",
+    "                   x = meses,\n",
+    "                   hue = segmentos, \n",
+    "                   col = anos,\n",
+    "                   col_wrap = 4)\n",
+    "plt.show()"
    ]
   },
   {
